--- a/01-pod.yaml
+++ b/01-pod.yaml
@@ -2,11 +2,15 @@ apiVersion: v1
 kind: Pod
 metadata:
  name: nginx
+ namespace: roboshop
+ labels:
+  name: nginx
+  project: roboshop
 spec:
 containers:
 - name: nginx
   image: nginx
-  ports: 
+  ports:
  - containerPort:80
 
 
