--- a/00-namespace.yaml
+++ b/00-namespace.yaml
@@ -1,8 +1,13 @@
 apiVersion: v1
-kind: Namespace
+kind: Pod
 metadata:
- name: roboshop-dev
+ name: multi-container
  labels:
-  environment: development
-  project: roboshop
-   
+  purpose: multi-container
+spec:
+ containers:
+  - name: nginx
+    image: nginx
+  - name: almalinux
+    image: almalinux:9
+    command: ["sleep","1000"]
