--- a/00-namespace.yaml
+++ b/00-namespace.yaml
@@ -1,13 +1,7 @@
 apiVersion: v1
-kind: Pod
+kind: Namespace
 metadata:
- name: multi-container
- labels:
-  purpose: multi-container
-spec:
- containers:
-  - name: nginx
-    image: nginx
-  - name: almalinux
-    image: almalinux:9
-    command: ["sleep","1000"]
+  name: roboshop
+  labels:
+    environment: development
+    project: roboshop
