--- a/06-resources.yaml
+++ b/06-resources.yaml
@@ -1,15 +1,18 @@
-apiVersion: v1 
+apiVersion: v1
 kind: Pod
 metadata:
- name: resources-demo
+  name: resources-demo
 spec:
- containers:
+  containers:
   - name: nginx
     image: nginx
     resources:
-     requests: 
-      memory: "68Mi"
-      cpu: "100m"
-   limits:
-    memory: "100Mi"
-    cpu: "120m"
+      # soft limit
+      requests:
+        memory: "68Mi"
+        cpu: "100m" # 1/10th of cpu
+       # provide equal or more than requests
+      # hard limit
+      limits:
+        memory: "100Mi"
+        cpu: "120m"
