--- a/08-config-map.yaml
+++ b/08-config-map.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata: 
-  name: ConfigMap-demo
+  name: configmap-demo
 data: 
   name: priyanka
   profession: devops
