--- a/09-podc-nfig.yaml
+++ b/09-podc-nfig.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
- name: configMap-demo
+ name: configmapo
 spec:
 containers:
  - name: nginx
    image: nginx
    envFrom:
    - configMapRef:
-     name: configMap-demo 
+     name: configmap-demo 
