--- a/09-podc-nfig.yaml
+++ b/09-podc-nfig.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
-kind: ConfigMap
+kind: Pod
 metadata:
- name: configmapo
+  name: configmapo
 spec:
-containers:
- - name: nginx
-   image: nginx
-   envFrom:
-   - configMapRef:
-      name: configmap-demo 
+  containers:
+    - name: nginx
+      image: nginx
+      envFrom:
+        - configMapRef:
+            name: configmap-demo
